<resources>
    <!--menu-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="tab_text_1">Events</string>
    <string name="tab_text_2">Pay</string>
    <string name="tab_text_3">History</string>
    <string name="name">name</string>

    <!--content-->
    <string name="app_name">BillPie</string>
    <string name="user_name">Eric</string>
    <string name="adam">Adam</string>
    <string name="cassius">Cassius</string>
    <string name="jiayao">Jiayao</string>

    <!--events-->
    <string name="eventTitle_schoolProject">School project</string>
    <string name="date_schoolProject">Oct 2017</string>
    <string name="eventTitle_trip">Trip to NYC</string>
    <string name="date_trip">Apr 2017</string>
    <string name="date0_trip">24 April</string>
    <string name="date1_trip">17 April</string>
    <string name="spending0_trip">Gas</string>
    <string name="spending0demo_trip">in Philadelphia</string>
    <string name="spending1_trip">Fine</string>
    <string name="spending1demo_trip">Due to drunk driving lol</string>
    <string name="spending2_trip">Vodka</string>
    <string name="spending2demo_trip">Going mad when my pc freezes</string>
    <string name="friend_nyc">Friends Trip NYC</string>

    <!--pay-->
    <string name="oweAdam">€127</string>
    <string name="oweCassius">€109</string>
    <string name="oweJiayao">€92</string>

    <string name="adamid2">Adam</string>
    <string name="create_bill">Create</string>
    <string name="title">Edit event title...</string>
    <string name="amount">Amount</string>
    <string name="submit">SUBMIT</string>
    <string name="cancel">Cancel</string>
    <string name="total_due">Total Due:</string>
    <string name="you_will_pay_to">You will pay to:</string>

    <string name="action_settings">Settings</string>
    <string name="members">Members:</string>
    <string name="titlef">Choose Friends</string>



</resources>
