<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:background="@color/colorBlueGrey"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorBlueGrey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_white_24dp" />

    <TextView
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/tab_text_3"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_schoolProject"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="79dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="20dp"
                android:layout_height="138dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@drawable/rectangle_orange" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="44dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/eventTitle_schoolProject"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/date_schoolProject"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="44dp" />

            <ImageButton
                android:layout_width="22dp"
                android:layout_height="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_expand_more_black_24dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <ImageView
        android:layout_width="24dp"
        android:layout_height="23dp"
        android:background="@color/colorRed"
        android:elevation="6dp"
        app:srcCompat="@drawable/ic_file_download_white_24dp"
        tools:layout_editor_absoluteX="304dp"
        tools:layout_editor_absoluteY="456dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/colorRed"
        app:elevation="5dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_file_download_white_24dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_trip"
        android:layout_width="match_parent"
        android:layout_height="253dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="177dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="20dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@drawable/rectangle_indigo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="44dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/eventTitle_trip"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/date_trip"
                android:textSize="12sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="44dp" />

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginTop="27dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:srcCompat="@drawable/pic_adam"
                tools:layout_editor_absoluteX="44dp" />

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                app:srcCompat="@drawable/pic_cassius"
                tools:layout_editor_absoluteX="44dp"
                tools:layout_editor_absoluteY="136dp" />

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                app:srcCompat="@drawable/pic_jiayao"
                tools:layout_editor_absoluteX="44dp"
                tools:layout_editor_absoluteY="193dp" />

            <Button
                android:layout_width="24dp"
                android:layout_height="23dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_expand_less_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="70dp"
                android:background="@color/colorGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/jiayao"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="204dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/adam"
                app:layout_constraintBottom_toBottomOf="@+id/textView14"
                app:layout_constraintTop_toTopOf="@+id/textView14"
                tools:layout_editor_absoluteX="92dp" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/cassius"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="144dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/oweAdam"
                android:textSize="23sp"
                tools:layout_editor_absoluteX="169dp"
                tools:layout_editor_absoluteY="87dp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/oweCassius"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView21"
                app:layout_constraintTop_toTopOf="@+id/textView21"
                tools:layout_editor_absoluteX="169dp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/oweJiayao"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView20"
                app:layout_constraintTop_toTopOf="@+id/textView20"
                tools:layout_editor_absoluteX="169dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
